# dotfile_manager

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .yamlfmt.yaml  README.md  deploy.sh  install.sh  pyproject.toml  setup.py  test.sh
.github/workflows/: ci.yml  lint-install-test-package.yml  python-package.yml  test.yml
dotfile_manager/: __main__.py  project.py  repo.py
scripts/: dotfile_manager
src/dotfile_manager/: cli.py  config.py  core.py  dotfile_manager.py  project.py  repo.py
src/dotfile_manager.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: test_cli.py  test_repo.py
test/test_data/dotfiles_repo/category/topic_e/: dotfile_manager.yaml  environment_variables.sh  executable_from_e.sh  install_macos.sh  install_ubuntu.sh
test/test_data/dotfiles_repo/topic_a/: dotfile_manager.yaml  environment_variables.sh  install_macos.sh  install_ubuntu.sh
test/test_data/dotfiles_repo/topic_b/: dotfile_manager.yaml  environment_variables.sh  install.sh
test/test_data/dotfiles_repo/topic_c/: dotfile_manager.yaml  environment_variables.sh  install.sh
test/test_data/dotfiles_repo/topic_d/: dotfile_manager.yaml  install.sh
